# ins

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  Cross.toml  LICENSE  Makefile  README.md  build.rs  clippy.toml
.claude/skills/migrate-to-ins-template/: SKILL.md
.github/workflows/: ci.yml  release.yml
.ins/app/nginx/: docker-compose.yaml.j2  nginx.conf.j2  qa.yaml
.ins/store/: deploy_history.duckdb
docs/: check-and-deploy.md  env-vars.md  migrate-to-ins-template.md  namespaces.md  qa-yaml-dependencies-env.md  template-values.md  volume-command.md  web-command.md
docs/superpowers/plans/: 2026-03-26-tui-command.md  2026-04-22-volume-command.md  2026-04-25-namespace.md  2026-05-07-ins-web.md
docs/superpowers/specs/: 2026-04-22-volume-command-design.md  2026-04-25-namespace-design.md  2026-05-07-ins-web-design.md
src/: env.rs  env_test.rs  execution_output.rs  execution_output_test.rs  hooks.rs  main.rs  main_test.rs  output.rs  output_test.rs  pipeline.rs  pipeline_test.rs  version.rs  version_test.rs
src/app/: dependency.rs  dependency_test.rs  files.rs  files_test.rs  mod.rs  parse.rs  parse_test.rs  types.rs
src/cli/: app.rs  check.rs  check_test.rs  deploy.rs  deploy_test.rs  docker.rs  docker_test.rs  mod.rs  node.rs  service.rs  service_detail.rs  template.rs  template_test.rs  tui.rs  version.rs  volume.rs  web.rs
src/config/: config_test.rs  load.rs  mod.rs  types.rs
src/file/: local.rs  local_test.rs  mod.rs  remote.rs  remote_test.rs
src/node/: detail.rs  list.rs  mod.rs  persist.rs  persist_test.rs  types.rs
src/node/info/: exec.rs  gpu.rs  info_test.rs  mod.rs  system.rs  types.rs
src/pipeline/: copy.rs  labels.rs  labels_test.rs  mod.rs  pipeline_test.rs  prepare.rs  prepare_test.rs  progress.rs  target.rs  template.rs  template_test.rs
src/provider/: docker_compose.rs  docker_compose_test.rs  hooks.rs  hooks_test.rs  mod.rs
src/store/: duck.rs  duck_test.rs
src/tui/: mod.rs  tui_test.rs  ui.rs
src/tui/state/: apps.rs  mod.rs  nodes.rs  services.rs
src/volume/: compose.rs  compose_test.rs  list.rs  list_test.rs  mod.rs  types.rs
src/web/: assets.rs  auth.rs  auth_test.rs  error.rs  jobs.rs  jobs_test.rs  mod.rs  state.rs  templates.rs  web_test.rs
src/web/handlers/: apps.rs  index.rs  mod.rs  nodes.rs  services.rs
src/web/static/: style.css
src/web/templates/: error.html  index.html  layout.html
src/web/templates/apps/: editor.html  files.html  list.html
src/web/templates/nodes/: form.html  list.html
src/web/templates/services/: job.html  list.html
template/: qa.yaml
