[package]
name = "ins"
version = "0.1.0"
edition = "2024"

[features]
# Default (debug): link against system `libduckdb` (fast builds).
# Release (portable): `--features duckdb-bundled` to compile DuckDB from source and bundle it.
duckdb-bundled = ["duckdb/bundled"]

[dependencies]
tokio = { version = "1.38.0", features = ["full"] }
hyper = "1.5.1"
serde = { version = "1.0.200", features = ["derive"] }
serde_json = "1.0.134"
tokio-util = "0.7.11"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
clap = { version = "4.5.35", features = ["derive"] }
anyhow = "1.0.98"
inquire = "0.9.4"
async-trait = "0.1.89"
serde_yaml = "0.9.33"
minijinja = "2.18.0"
duckdb = "1.4.4"
