[package]
name = "ins"
version = "0.1.2"
edition = "2024"
build = "build.rs"

[features]
# Default (debug): link against system `libduckdb` (fast builds).
# Release (portable): `--features duckdb-bundled` to compile DuckDB from source and bundle it.
duckdb-bundled = ["duckdb/bundled"]

[dependencies]
anyhow = "1.0.98"
async-trait = "0.1.89"
axum = { version = "0.7", default-features = false, features = ["http1", "json", "query", "tokio", "form"] }
axum-extra = { version = "0.9", default-features = false, features = ["cookie"] }
chrono = "0.4.44"
clap = { version = "4.5.35", features = ["derive"] }
crossterm = "0.28"
duckdb = "1.4.4"
futures-util = "0.3"
hyper = "1.5.1"
indicatif = "0.17"
inquire = "0.9.4"
minijinja = "2.18.0"
rand = "0.8"
ratatui = "0.29"
russh = "0.58"
russh-sftp = "2.1.1"
serde = { version = "1.0.200", features = ["derive"] }
serde_json = "1.0.134"
serde_yaml = "0.9.33"
tokio = { version = "1.38.0", features = ["full"] }
tokio-stream = "0.1"
tokio-util = "0.7.11"
toml = "1.1.2"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
which = "8.0.2"

[dev-dependencies]
tempfile = "3"
